--- a/waybar/style.css
+++ b/waybar/style.css
@@ -40,6 +40,17 @@
     padding: 0;
 }
 
+#clock.date {
+    color: #a8a29e;
+    font-size: 0.85rem;
+    margin-right: 2px;
+}
+
+#clock.time {
+    font-weight: bold;
+    margin-left: 2px;
+}
+
 #custom-powerprofile.performance {
     color: #ef4444;
 }
